# movebase3D_scout_sim

./: .gitmodules  README.md  ROS2_ReadMe.md  ReadMe.md
MoveBase3D/: README.md
MoveBase3D/global_planner_3d/config/move_base_3d/: move_base_global_obs.yaml  move_base_local.yaml
MoveBase3D/global_planner_3d/include/: execution_classes.h  execution_planner.h
MoveBase3D/global_planner_3d/src/: execution_classes.cpp  execution_planner.cpp  execution_vis.cpp  global_planning_node.cpp  global_planning_obs.cpp
MoveBase3D/local_planner_3d/: CMakeLists.txt
MoveBase3D/local_planner_3d/launch/: local_planner.launch
MoveBase3D/local_planner_3d/scripts/: local_planner_node.py
MoveBase3D/rover_launch/launch/: move_base_3d.launch  point.launch
bringup/: package.xml
bringup/launch/: bringup.launch
global_planner_3d/config/move_base_3d/: move_base_global.yaml  move_base_global_obs.yaml  move_base_local.yaml
global_planner_3d/include/: backward.hpp  execution_classes.hpp
global_planner_3d/src/: execution_planner.cpp  execution_vis.cpp  global_planning_node.cpp  global_planning_obs.cpp
install/: local_setup.sh  setup.sh
install/global_planner_3d/share/global_planner_3d/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/global_planner_3d/share/global_planner_3d/cmake/: global_planner_3dConfig.cmake
install/global_planner_3d/share/global_planner_3d/include/: execution_planner.hpp  execution_vis.hpp
install/local_planner_3d/lib/local_planner_3d/: local_planner_node
install/local_planner_3d/share/local_planner_3d/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rover_gpr/lib/rover_gpr/: gpr_path
install/rover_gpr/share/rover_gpr/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rover_gpr/share/rover_gpr/cmake/: rover_gprConfig.cmake  (+1 more)
install/rover_launch/share/rover_launch/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/rover_msgs/share/rover_msgs/: local_setup.sh  package.sh
install/rover_pcl_filter/lib/rover_pcl_filter/: pcl_filter_manager
install/rover_pcl_filter/share/rover_pcl_filter/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rover_teleop/lib/rover_teleop/: teleop_key
install/rover_teleop/share/rover_teleop/: package.ps1  package.sh
install/rviz_goal_tool_plugins/share/rviz_goal_tool_plugins/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rviz_multi_goals_manager_plugins/share/rviz_multi_goals_manager_plugins/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rviz_waypoint_generator_plungins/lib/rviz_waypoint_generator_plungins/: waypoint_generator
install/rviz_waypoint_generator_plungins/share/rviz_waypoint_generator_plungins/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
livox_laser_simulation/launch/: mid360_IMU_platform.launch
livox_laser_simulation/src/: livox_points_plugin.cpp  livox_points_plugin_old.cpp
livox_laser_simulation/urdf/: livox_mid360.xacro  mid360_IMU_platform.xacro
local_planner_3d/: package.xml  setup.py
local_planner_3d/local_planner_3d/nodes/: local_planner_node.py
local_planner_3d/scripts/: local_planner_node.py
movebase_3d/: CMakeLists.txt  package.xml
movebase_3d/launch/: movebase_3d.launch
movebase_3d/src/: movebase_3d.cpp
pcl_filter/: CMakeLists.txt  package.xml
pcl_filter/launch/: pcl_filter_manager.launch
rover_gpr/: CMakeLists.txt
rover_gpr/include/rover_gpr/: gaussian_process_regression.h  gaussian_process_regression.hpp
rover_gpr/src/: gpr_path.cpp
rover_launch/: package.xml
rover_launch/launch/: move_base_3d.launch  move_base_3d_launch.py  t1_map.launch  t1_nav.launch  teleop_key_launch.py
rover_launch/launch/include/: slam_map_config.launch  slam_nav_config.launch  slam_node.launch
rover_launch/rviz_config/: nav.rviz
rover_pcl_filter/: package.xml
rover_pcl_filter/src/: pcl_filter_manager.cpp
rover_teleop/: package.xml
rviz_plungins/rviz_multi_goals_manager_plugins/: package.xml
rviz_plungins/rviz_multi_goals_manager_plugins/src/: multi_navi_goal_panel.cpp
rviz_plungins/rviz_waypoint_generator_plungins/: package.xml
rviz_plungins/rviz_waypoint_generator_plungins/include/rviz_waypoint_generator_plungins/: sample_waypoints.h
rviz_plungins/rviz_waypoint_generator_plungins/src/: waypoint_generator.cpp
scout_simulator/putn_map/: CMakeLists.txt  package.xml
scout_simulator/putn_map/launch/: map1.launch  map2.launch
scout_simulator/scout_description/urdf/: scout_v2.xacro
scout_simulator/scout_gazebo_sim/launch/: spawn_scout_v2.launch
serial_node/: CMakeLists.txt  package.xml
serial_node/src/: read_cmd_vel.cpp  serial_node.cpp
src/MoveBase3D/local_planner_3d/: setup.cfg
src/MoveBase3D/rover_pcl_filter/launch/: pcl_filter_manager_launch.py
src/MoveBase3D/rviz_plungins/rviz_multi_goals_manager_plugins/: plugin_description.xml
src/MoveBase3D/rviz_plungins/rviz_waypoint_generator_plungins/: CMakeLists.txt
src/global_planner_3d/: CMakeLists.txt  package.xml
src/global_planner_3d/config/move_base_3d/: move_base_local.yaml
src/global_planner_3d/src/: execution_classes.cpp  execution_planner.cpp
src/rover_launch/: CMakeLists.txt
src/rover_launch/launch/: move_base_3d_launch.py
src/rover_msgs/: CMakeLists.txt
src/rover_pcl_filter/: CMakeLists.txt
src/rover_teleop/: setup.py
src/rover_teleop/rover_teleop/nodes/: teleop_key.py
src/rviz_plungins/rviz_multi_goals_manager_plugins/: CMakeLists.txt
transform/: CMakeLists.txt  package.xml
transform/launch/: transform.launch
transform/src/: body_base_link.cpp  map_camera_init.cpp  pub_map.cpp  pub_pointCloud.cpp
(+80 files in other folders)
